Fixed incorrect wrapping behavior in program output

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,7 @@ button, select {
     font-size: 16px;
     color: #dfe;
     overflow: auto;
+    white-space: pre;
 }
 
 .control-set {
